--- a/Cargo.toml
+++ b/Cargo.toml
@@ -42,4 +42,8 @@ url = "2.5"
 uuid = { version = "1.0", features = ["v4", "serde"] }
 rand = "0.8"
 
+[profile.release]
+strip = true
+lto = true
+
 [dev-dependencies]
