--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -46,32 +46,9 @@ jobs:
     - name: Run tests
       run: cargo test --verbose
 
-  create-release:
-    name: Create Release
-    needs: test
-    runs-on: ubuntu-latest
-    outputs:
-      upload_url: ${{ steps.create_release.outputs.upload_url }}
-      version: ${{ steps.get_version.outputs.version }}
-    steps:
-      - name: Get version from tag
-        id: get_version
-        run: echo "version=${GITHUB_REF#refs/tags/v}" >> $GITHUB_OUTPUT
-
-      - name: Create Release
-        id: create_release
-        uses: actions/create-release@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          tag_name: ${{ github.ref }}
-          release_name: Release ${{ github.ref }}
-          draft: false
-          prerelease: false
-
   build-release:
     name: Build Release
-    needs: create-release
+    needs: test
     runs-on: ${{ matrix.os }}
     strategy:
       fail-fast: false
@@ -154,11 +131,7 @@ jobs:
           7z a ../../../${{ matrix.asset_name }}.${{ matrix.archive_ext }} ${{ matrix.artifact_name }}
 
       - name: Upload Release Asset
-        uses: actions/upload-release-asset@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        uses: softprops/action-gh-release@v2
         with:
-          upload_url: ${{ needs.create-release.outputs.upload_url }}
-          asset_path: ./${{ matrix.asset_name }}.${{ matrix.archive_ext }}
-          asset_name: ${{ matrix.asset_name }}.${{ matrix.archive_ext }}
-          asset_content_type: application/octet-stream
+          files: ${{ matrix.asset_name }}.${{ matrix.archive_ext }}
+          fail_on_unmatched_files: true
