Fix release workflow permissions
Add contents: write permission to build-release job to allow
creating GitHub releases and uploading assets. This resolves
the "Resource not accessible by integration" error.

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -50,6 +50,8 @@ jobs:
     name: Build Release
     needs: test
     runs-on: ${{ matrix.os }}
+    permissions:
+      contents: write
     strategy:
       fail-fast: false
       matrix:
